--- a/Crime/app/src/main/res/values/strings.xml
+++ b/Crime/app/src/main/res/values/strings.xml
@@ -1,5 +1,8 @@
 <resources>
     <string name="app_name">Crime</string>
+    <string name="crime_title_label">Заголовок</string>
+    <string name="crime_details_label">Детали</string>
+    <string name="crime_solved_label">Раскрыто?</string>
 
     <string name="crime_title_hint">Введите название преступления</string>
 </resources>
