--- a/Crime/app/src/main/res/values/strings.xml
+++ b/Crime/app/src/main/res/values/strings.xml
@@ -4,6 +4,7 @@
     <string name="crime_details_label">Детали</string>
     <string name="crime_solved_label">Раскрыто?</string>
     <string name="crimes_title">Преступления</string>
+    <string name="date_picker_title">Дата преступления:</string>
 
     <string name="crime_title_hint">Введите название преступления</string>
 </resources>
