--- a/Crime/app/src/main/res/values/strings.xml
+++ b/Crime/app/src/main/res/values/strings.xml
@@ -7,5 +7,15 @@
     <string name="date_picker_title">Дата преступления:</string>
     <string name="time_picker_title">Время преступления:</string>
 
+    <string name="new_crime">Новое преступление</string>
+    <string name="show_subtitle">Показать Subtitle</string>
+    <string name="hide_subtitle">Hide Subtitle</string>
+    <string name="subtitle">Если Вы видите что-то, скажите что-то.</string>
+    <string name="delete_crime">Удалить</string>
+
     <string name="crime_title_hint">Введите название преступления</string>
+    <string name="title_activity_main">MainActivity</string>
+
+    <string name="hello_world">Hello world!</string>
+    <string name="action_settings">Settings</string>
 </resources>
