--- a/Crime/app/src/main/res/values/strings.xml
+++ b/Crime/app/src/main/res/values/strings.xml
@@ -18,4 +18,6 @@
 
     <string name="hello_world">Hello world!</string>
     <string name="action_settings">Settings</string>
+
+    <string name="take">снимок</string>
 </resources>
